# PIMC-anharmonic-oscillator

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  theory.md
.github/workflows/: ci.yml
notebooks/: PIMC_anharmonic_oscillator_pipeline.ipynb
scripts/: check_notebooks_clean.py  clean_artifacts.sh  strip_notebook_outputs.py
src/: __init__.py  action.py  analysis.py  experiment.py  io.py  observables.py  plotting.py  potential.py  sampler.py
src/pimc_oscillator/: action.py  config.py  experiment.py  potential.py  sampler.py  utils.py
tests/: conftest.py  test_action.py  test_analysis.py  test_observables.py  test_sampler.py  test_smoke.py
