[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pimc-anharmonic-oscillator"
version = "0.1.0"
description = "Path Integral Monte Carlo tools to estimate the quartic-oscillator gap trend Delta(lambda)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Antonio Mosca" }]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
